# application-api

./: Cargo.toml  Dockerfile  LICENSE  index.yaml  workload-assignment.example.com.yaml
.devcontainer/: run.sh
.github/workflows/: rust.yml
charts/application-api/: Chart.yaml  values.yaml
charts/application-api/templates/: application-assignment.microsoft.com.yaml  application-environment.microsoft.com.yaml  application-template.microsoft.com.yaml  application.microsoft.com.yaml  cluster-role-binding.yaml  deployment.yaml  service-account.yaml  service.yaml
crds/: application-assignment.example.com.yaml  application-environment.microsoft.com.yaml  application-template.microsoft.com.yaml  application.example.com.yaml  workload-assignment.example.com.yaml  workload.example.com.yaml
examples/: application-assignment-example.yaml  application.example.com.yaml  cluster-agent-workload.example.com.yaml  daemon-workload.example.com.yaml  workload-assignment-example.yaml
fixtures/template/: release.yaml
src/: crd.rs  finalizer.rs  main.rs  workload_assignment.rs
src/controllers/: application_assignment.rs  assignment.rs  mod.rs  workload_assignment.rs
src/models/: application.rs  application_assignment.rs  assignment.rs  assignment_spec.rs  cluster.rs  deployment.rs  environment.rs  label_match_spec.rs  mod.rs  overrides_spec.rs  template.rs  template_spec.rs  templates.rs  templates_spec.rs  workload.rs  workload_assignment.rs
src/utils/: error.rs  render.rs
src/workflows/: gitops.rs  mod.rs  workflow.rs
