[package]
name = "application-api"
version = "0.1.0"
authors = ["Tim Park <timfpark@gmail.com>"]
edition = "2018"

[dependencies]
futures = "~0.3"
git2 = "~0.13"
handlebars = "~4.1"
kube = { version = "~0.60", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
kube-derive = "~0.60" # Support for Custom Resource Definitions
kube-runtime = "~0.60" # Custom controller support
k8s-openapi = { version = "~0.13", default-features = false, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
regex = "~1.5"
serde = "~1.0"
serde_json = "~1.0"
schemars = "~0.8"
tempfile = "~3.2"
thiserror = "~1.0" # Custom Error definitions and convenient error mappings
tokio = { version = "~1.0", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources

[dev-dependencies]
tokio-test = "~0.4"
